fix: cho phep tat ca cac headers trong CORS de tranh loi 403