@@ -54,7 +54,7 @@ public class SecurityConfig {
         // Cho phép frontend domain (hỗ trợ localhost dev, docker port 3000 và Vercel deploy)
         configuration.setAllowedOriginPatterns(List.of("http://localhost:5173", "http://localhost:3000", "https://*.vercel.app"));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With"));
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
         configuration.setExposedHeaders(List.of("Authorization"));
 
